# function-calling-demo

./: README.md  pyproject.toml
notebooks/: demo.ipynb
src/function_calling_demo/: agent.py
